NFT Preview card

--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=IM+Fell+English+SC&family=Montserrat+Alternates:wght@100&family=Montserrat:wght@100&family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 </head>
 <body>
+  <section class="card">
+    <div class="olho-img">
+      <div class="olho"> <img src="images/icon-view.svg"/>
+      </div>
+      <img class="equilibrium" src="./images/image-equilibrium.jpg"/>
+    </div>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+    <h1> Equilibrium #3429 </h1>
+    <p class="description"> Our Equilibrium collection promotes balance and calm. </p>
+    <div class="info">
+      <img src="./images/icon-ethereum.svg"/>
+      <p class="eth-text"> 0.041 ETH </p>
+      <img src="./images/icon-clock.svg"/>
+      <p class="clock-text"> 3 days left </p>
+    </div>
+    <footer>
+      <img class="rosto-img" src="./images/image-avatar.png">
+      <p> Creation of <em>Jules Wyvern</em></p>
+    </footer>
+  </section>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Náder W. S. Sírio</a>.
   </div>
 </body>
 </html>
