--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Náder W. S. Sírio</a>.
+    Coded by <a href="https://github.com/nadersirio">Náder W. S. Sírio</a>.
   </div>
 </body>
 </html>
