NTF Preview Card finalizado

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="olho-img">
       <div class="olho"> <img src="images/icon-view.svg"/>
       </div>
-      <img class="equilibrium" src="./images/image-equilibrium.jpg"/>
+      <img class="equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium Cube"/>
     </div>
 
     <h1> Equilibrium #3429 </h1>
     <p class="description"> Our Equilibrium collection promotes balance and calm. </p>
     <div class="info">
-      <img src="./images/icon-ethereum.svg"/>
+      <img src="./images/icon-ethereum.svg" alt="Ethereum Emoji"/>
       <p class="eth-text"> 0.041 ETH </p>
-      <img src="./images/icon-clock.svg"/>
+      <img src="./images/icon-clock.svg" alt="Clock Emoji"/>
       <p class="clock-text"> 3 days left </p>
     </div>
     <footer>
-      <img class="rosto-img" src="./images/image-avatar.png">
+      <img class="rosto-img" src="./images/image-avatar.png" alt="Face's image">
       <p> Creation of <em>Jules Wyvern</em></p>
     </footer>
   </section>
