NFT Preview Card finalizado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <section class="card">
     <div class="olho-img">
-      <div class="olho"> <img src="images/icon-view.svg"/>
+      <div class="olho"> <img src="images/icon-view.svg" alt="Eyes Emoji"/>
       </div>
       <img class="equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium Cube"/>
     </div>
